Move the html style into css styling.

--- a/layouts/_partials/footer.html
+++ b/layouts/_partials/footer.html
@@ -1,14 +1,12 @@
 <p>&copy; Copyright {{ now.Year }} &middot;</p>
 <p>
     <a href="https://github.com/hansth">
-        <img src="/github.svg" alt="GitHub"
-             style="height: 1.5em; vertical-align: middle; position: relative; top: 0.0em; margin: 0 0.4em 0 0.4em;">
+        <img src="/github.svg" alt="GitHub" class="footer-social-icon">
     </a>
 </p>
 <p> &middot;</p>
 <p>
     <a href="https://www.linkedin.com/in/hansth/">
-        <img src="/linkedin.svg" alt="LinkedIn"
-             style="height: 1.5em; vertical-align: middle; position: relative; top: 0.0em; margin: 0 0.4em 0 0.4em;">
+        <img src="/linkedin.svg" alt="LinkedIn" class="footer-social-icon">
     </a>
 </p>
