--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,6 +211,14 @@ footer a {
   border-bottom: none;
 }
 
+.footer-social-icon {
+  height: 1.5em;
+  vertical-align: middle;
+  position: relative;
+  top: 0.0em;
+  margin: 0 0.4em 0 0.4em;
+}
+
 pre {
   background: var(--color-bg-secondary);
   border: 2px solid var(--color-border);
