--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
   --spacing-base: 1.4em;
   --font-family-mono: monospace;
   --font-size-base: 1.3em;
-  --font-size-small: 0.9em;
+  --font-size-small: 1.1em;
 
   /* Spacing */
   --spacing-xs: calc(var(--spacing-base) * 0.25);
@@ -22,6 +22,7 @@
 
   /* Layout */
   --container-width: 80ch;
+  --container-width-small: 100vw;
   --border-radius: 3px;
   --gap-base: 1em;
   --gap-small: 0.5em;
@@ -276,7 +277,7 @@ header {
 
 /* Path navigation styles */
 .path-nav {
-  font-family: var(--font-family-mono);
+  font-family: var(--font-family-mono), serif;
   padding: var(--spacing-base) 0;
   white-space: nowrap;
   overflow-x: auto;
@@ -368,7 +369,7 @@ header {
 
 /* Main menu navigation styles */
 .terminal-nav {
-  font-family: var(--font-family-mono);
+  font-family: var(--font-family-mono), serif;
   border-top: 1px solid var(--color-border);
   margin-top: calc(var(--spacing-base) * 2);
   padding-top: var(--spacing-base);
@@ -519,6 +520,6 @@ blockquote > :last-child {
     gap: 0;
     padding: 1em;
     font: var(--font-size-small) / var(--spacing-base) var(--font-family-mono);
+    grid-template-columns: minmax(auto, var(--container-width-small));
   }
-
 }
