--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -285,6 +285,7 @@ header {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
   width: 100%;
+  font-size: calc(var(--font-size-small) / 1.1);
 }
 
 .path-nav::-webkit-scrollbar {
@@ -370,6 +371,7 @@ header {
 /* Main menu navigation styles */
 .terminal-nav {
   font-family: var(--font-family-mono), serif;
+  font-size: calc(var(--font-size-small) / 1.1);
   border-top: 1px solid var(--color-border);
   margin-top: calc(var(--spacing-base) * 2);
   padding-top: var(--spacing-base);
