--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,8 +13,8 @@
 
   /* Colors */
   --color-bg-primary: #f6eee3;
-  --color-bg-secondary: #eee7d7;
-  --color-border: #e5decf;
+  --color-bg-secondary: #ece3d0;
+  --color-border: #dcd5c7;
   --color-text-primary: #000;
   --color-text-muted: #888;
   --color-selection-bg: #e5decf;
@@ -294,7 +294,7 @@ header {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
   width: 100%;
-  font-size: calc(var(--font-size-small) / 1.1);
+  font-size: calc(var(--font-size-small) /1.15);
 }
 
 .path-nav::-webkit-scrollbar {
@@ -380,7 +380,7 @@ header {
 /* Main menu navigation styles */
 .terminal-nav {
   font-family: var(--font-family-mono), serif;
-  font-size: calc(var(--font-size-small) / 1.1);
+  font-size: calc(var(--font-size-small) / 1.15);
   border-top: 1px solid var(--color-border);
   margin-top: calc(var(--spacing-base) * 2);
   padding-top: var(--spacing-base);
@@ -388,8 +388,8 @@ header {
 
 .terminal-nav nav ul {
   list-style: none;
-  padding: 0;
   margin: 0;
+  padding: 0 0 0 5px;
   display: flex;
   gap: 1em;
 }
@@ -482,7 +482,7 @@ blockquote {
   padding: var(--spacing-sm) var(--spacing-base);
   border-left: 3px solid var(--color-border);
   background: var(--color-bg-secondary);
-  font-style: italic;
+  /*font-style: normal;*/
 }
 
 blockquote > :first-child {
