--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
         <ul>
             {{ range .Pages }}
             <li>
-                <span>{{- partial "date" .Date -}}</span>
+                <span>•<!--{{- partial "date" .Date -}}--></span>
                 <div><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></div>
             </li>
             {{ end }}
