--- a/layouts/_partials/footer.html
+++ b/layouts/_partials/footer.html
@@ -1,7 +1,7 @@
 <p>&copy; Copyright {{ now.Year }} &middot;</p>
 <p>
-    <a href="https://github.com/hansth">
-        <img src="/github.svg" alt="GitHub" class="footer-social-icon">
+    <a href="https://gitlab.com/devops8614042">
+        <img src="/gitlab.svg" alt="GitLab" class="footer-social-icon">
     </a>
 </p>
 <p> &middot;</p>
